# Stock_final

./: .app_status.json  .coverage  .cursorrules  .dockerignore  .env  .env.bak  .env.example  .env.production.example  .flake8  .git_log.txt  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  .tunnel_url  401_LOGOUT_STORM_ANALYSIS.md  AGENTS.md  ARCHITECTURE.md  BACKEND_PHASE_B2_PROGRESS.md  BACKEND_REMEDIATION_PROGRESS.md  BASELINE_TEST_MATRIX.md  BUSINESS_LOGIC_VERIFICATION.md  CODEBASE_ANALYSIS.md  COMPREHENSIVE_ANALYSIS_REPORT.md  COMPREHENSIVE_CODEBASE_REPORT.md  COMPREHENSIVE_ERROR_ANALYSIS.md  COMPREHENSIVE_TEST_REPORT.md  DEPLOYMENT_ROADMAP.md  DEVELOPER_HANDOFF.md  ENVIRONMENT_VARIABLES_ISSUES.md  ERROR_MESSAGE_CATALOG.md  FINAL_BACKEND_REMEDIATION_STATUS.md  FINAL_REQUIREMENTS.md  FRONTEND_TEST_FIX_SUMMARY.md  FRONTEND_TEST_GOVERNANCE_COMPLIANCE_FINAL.md  FRONTEND_TEST_INFRASTRUCTURE_AUDIT.md  FRONTEND_TEST_PHASE3_GUARDRAILS_COMPLETE.md  FRONTEND_TEST_REMEDIATION_COMPLETE.md  GAP_ANALYSIS_TRACKER.md  GA_GATE_STATUS.json  (+172 more)
backend/: .coverage  .coveragerc  .env  .env.example  .env.lan  .env.prod.example  .env.production.example  Dockerfile  FASTAPI_CONFIGURATION_REPORT.md  MONGODB_CONFIGURATION_REPORT.md  README.md  StockVerifySystem.spec  app_factory.py  backend_port.json  build_exe.py  check_items.py  config.py  config_governance.py  db_mapping_config.py  error_log.txt  error_messages.py  exceptions.py  locustfile.py  output_log.txt  pyproject.toml  pytest.ini  pytest_output.txt  requirements.dev.txt  requirements.production.txt  requirements.txt  ruff_errors.txt  ruff_errors_filtered.txt  ruff_report.txt  server.py  sql_server_connector.py  test_conn.py  test_debug.txt
backend/api/: admin_control_api.py  admin_dashboard_api.py  analytics_api.py  auth.py  auth_routes.py  backend_config_api.py  count_lines_api.py  count_lines_routes.py  count_state_api.py  count_submission_api.py  dashboard_analytics_api.py  erp_api.py  (+43 more)
(+1214 files in other folders)
